--- a/build.gradle
+++ b/build.gradle
@@ -38,19 +38,23 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.4.0'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'org.mybatis:mybatis:3.5.16'
 
-
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
-
+    // 추가된 Jakarta Mail 의존성
+    implementation 'jakarta.mail:jakarta.mail-api:2.0.0' // 최신 버전으로 변경
+    implementation 'com.sun.mail:jakarta.mail:2.0.0' // 최신 버전으로 변경
 
 
 }
